force-app/main/default/objects/sked__Slot__c/sked__Slot__c.object-meta.xml
<CustomObject>
    <label>Slot</label>
    <nameField>
        <label>Slot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Slots</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>