force-app/main/default/objects/sked__Slot__c/fields/Collection_Operation_Name__c.field-meta.xml
<CustomField>
    <fullName>Collection_Operation_Name__c</fullName>
    <formula>sked_Drive__r.sked_Collection_Operation__r.Name</formula>
    <label>Collection Operation Name</label>
    <type>Text</type>
</CustomField>