force-app/main/default/objects/sked__Slot__c/fields/Drive_Date__c.field-meta.xml
<CustomField>
    <fullName>Drive_Date__c</fullName>
    <formula>sked_Drive__r.sked_Drive_Date__c</formula>
    <label>Drive Date</label>
    <type>Date</type>
</CustomField>