force-app/main/default/objects/sked__Slot__c/fields/Drive_Name__c.field-meta.xml
<CustomField>
    <fullName>Drive_Name__c</fullName>
    <formula>HYPERLINK(&#39;/&#39;+sked_Drive__c, sked_Drive__r.Name)</formula>
    <label>Drive Name</label>
    <type>Text</type>
</CustomField>