force-app/main/default/objects/sked__Slot__c/fields/Drive_Status__c.field-meta.xml
<CustomField>
    <fullName>Drive_Status__c</fullName>
    <description>Related Drive Status</description>
    <formula>TEXT(sked_Drive__r.sked_Status__c)</formula>
    <label>Drive Status</label>
    <type>Text</type>
</CustomField>