force-app/main/default/objects/sked__Slot__c/fields/Drive_Type__c.field-meta.xml
<CustomField>
    <fullName>Drive_Type__c</fullName>
    <description>Record type Name of related Opportunity</description>
    <formula>sked_Drive__r.sked_Opportunity__r.RecordType.Name</formula>
    <label>Drive Type</label>
    <type>Text</type>
</CustomField>