force-app/main/default/objects/sked__Slot__c/fields/Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lock_Reason__c</fullName>
    <label>Lock Reason (Dummy)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>