force-app/main/default/objects/sked__Slot__c/fields/sked__Job__c.field-meta.xml
<CustomField>
    <fullName>sked__Job__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Job</label>
    <referenceTo>sked__Job__c</referenceTo>
    <relationshipLabel>Slots</relationshipLabel>
    <relationshipName>Slots</relationshipName>
    <type>Lookup</type>
</CustomField>