force-app/main/default/objects/sked__Slot__c/fields/sked__Location_White_Listed__c.field-meta.xml
<CustomField>
    <fullName>sked__Location_White_Listed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Location White Listed</label>
    <type>Checkbox</type>
</CustomField>