force-app/main/default/objects/sked__Slot__c/fields/sked__Quantity__c.field-meta.xml
<CustomField>
    <fullName>sked__Quantity__c</fullName>
    <defaultValue>1</defaultValue>
    <description>The number of resources required for this slot</description>
    <label>Quantity</label>
    <precision>4</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>