force-app/main/default/objects/sked__Slot__c/fields/sked_End__c.field-meta.xml
<CustomField>
    <fullName>sked_End__c</fullName>
    <label>End</label>
    <type>DateTime</type>
</CustomField>