force-app/main/default/objects/sked__Slot__c/fields/sked_End_Time__c.field-meta.xml
<CustomField>
    <fullName>sked_End_Time__c</fullName>
    <label>End Time</label>
    <type>Time</type>
</CustomField>