force-app/main/default/objects/sked__Slot__c/fields/sked_Fixed_Site_Lock_Comment__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Lock_Comment__c</fullName>
    <label>Fixed Site Lock Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>