force-app/main/default/objects/sked__Slot__c/fields/sked_Fixed_Site_Lock_Reason__c.field-meta.xml
<CustomField>
    <fullName>sked_Fixed_Site_Lock_Reason__c</fullName>
    <label>Fixed Site Lock Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>sked_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BSF</fullName>
            </value>
            <value>
                <fullName>Freezing</fullName>
            </value>
            <value>
                <fullName>Inventory Management</fullName>
            </value>
            <value>
                <fullName>Machines</fullName>
            </value>
            <value>
                <fullName>Manufacturing Constraint</fullName>
            </value>
            <value>
                <fullName>Site Issue</fullName>
            </value>
            <value>
                <fullName>Staffing</fullName>
            </value>
            <value>
                <fullName>Weather</fullName>
            </value>
            <value>
                <fullName>Manufacturing Constraint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>