force-app/main/default/objects/sked__Slot__c/fields/sked_Is_Locked_By_System__c.field-meta.xml
<CustomField>
    <fullName>sked_Is_Locked_By_System__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Locked By System</label>
    <type>Checkbox</type>
</CustomField>