force-app/main/default/objects/sked__Slot__c/fields/sked_Label__c.field-meta.xml
<CustomField>
    <fullName>sked_Label__c</fullName>
    <label>Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>