force-app/main/default/objects/sked__Slot__c/fields/sked_Timezone__c.field-meta.xml
<CustomField>
    <fullName>sked_Timezone__c</fullName>
    <label>Timezone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>