force-app/main/default/objects/sked__Slot__c/fields/sked_Type__c.field-meta.xml
<CustomField>
    <fullName>sked_Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>2RBC</fullName>
            </value>
            <value>
                <fullName>Whole Blood</fullName>
            </value>
            <value>
                <fullName>Plasma</fullName>
            </value>
            <value>
                <fullName>Platelet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>